fix folder list layout bug

--- a/src/containers/PageFolders/PageFolders.scss
+++ b/src/containers/PageFolders/PageFolders.scss
@@ -1,5 +1,6 @@
 .pageFolders {
   .folder {
+    vertical-align: top;
     position: relative;
     width: 240px;
     height: 120px;
